# memoir

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: cli.md  index.md  installation.md  openclaw.md  quickstart.md
examples/: basic_usage.py  langgraph_integration.py  performance_benchmark.py
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: memoir-remember.md
plugins/claude-code/hooks/: common.sh  session-start.sh
plugins/claude-code/scripts/: derive-store-path.sh
plugins/claude-code/skills/memory-recall/: SKILL.md
scripts/: check_status.py
scripts/pypi-smoke/: Dockerfile  README.md  smoke.sh
src/langmem_prollytree/: __init__.py
src/langmem_prollytree/core/: __init__.py  memory_manager.py  mock_store.py  prolly_adapter.py  simple_memory_manager.py
src/langmem_prollytree/search/: __init__.py  hierarchical_search.py
src/langmem_prollytree/taxonomy/: __init__.py  semantic_classifier.py  semantic_taxonomy.py
src/memoir/: __init__.py
src/memoir/cli/: main.py
src/memoir/llm/: litellm_client.py
src/memoir/services/: branch_service.py
src/memoir/taxonomy/data/general/: descriptions.md  examples.md  presets.md
src/memoir/ui/: ui.html  visualization.html
tests/: test_classifier.py  test_cli.py  test_taxonomy.py
tests/test_services/: test_branch_service.py
(+16 files in other folders)
