[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langmem-prollytree"
version = "0.1.0"
description = "High-performance semantic memory system integrating LangMem with ProllyTree"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["ai", "memory", "langchain", "langgraph", "prollytree", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langmem>=0.0.29",
    "prollytree>=0.2.1",
    "langgraph>=0.6.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/langmem-prollytree"
Documentation = "https://langmem-prollytree.readthedocs.io"
Repository = "https://github.com/yourusername/langmem-prollytree"
Issues = "https://github.com/yourusername/langmem-prollytree/issues"